--- a/src/pages/sections/home/sec2.module.css
+++ b/src/pages/sections/home/sec2.module.css
@@ -2,13 +2,25 @@
     width: 100%;
     display: flex;
     flex-direction: row;
-
+    justify-content: space-between;
     border-bottom: #5A5A5A 1px solid;
+    margin-top: 30px;
     margin-bottom: 30px;
+
+    text-align: center;
+    font-weight: 600;
+    font-size: clamp(1rem, 2vw, 1.7rem);
+    font-family: 'Inter', sans-serif;
+
+  
+}
+.selector div{
+    width: 100%;
+
+  
 }
 
 .carousel {
-
 
     display: flex;
     margin: 0 auto;
@@ -22,17 +34,9 @@
 
     justify-content: center;
     align-items: center;
+  
 
 
-
-}
-
-.selector a {
-    width: 100%;
-    font-family: 'Poppins', sans-serif;
-    font-size: 22px;
-    font-weight: 600;
-    padding-bottom: 16px;
 
 }
 
